--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -1284,7 +1284,6 @@
   </data>
   <data name="Clearing_Mesh_Cache_word" xml:space="preserve">
     <value>Clearing Mesh Cache</value>
-    <comment>_cache</comment>
   </data>
   <data name="Add_Region_word" xml:space="preserve">
     <value>Add Region</value>
@@ -2584,11 +2583,9 @@
   </data>
   <data name="Local" xml:space="preserve">
     <value>Local</value>
-    <comment>new</comment>
   </data>
   <data name="Local_Grid" xml:space="preserve">
     <value>Local_Grid</value>
-    <comment>new</comment>
   </data>
   <data name="MinusSign_NT" xml:space="preserve">
     <value>-</value>
@@ -2596,7 +2593,6 @@
   </data>
   <data name="No_Avatars" xml:space="preserve">
     <value>No Avatars</value>
-    <comment>new</comment>
   </data>
   <data name="ODE_word_NT" xml:space="preserve">
     <value>ODE</value>
@@ -2621,5 +2617,9 @@
   <data name="Zero_word_NT" xml:space="preserve">
     <value>0</value>
     <comment>Skip Xlate</comment>
+  </data>
+  <data name="Cannot locate folder_word" xml:space="preserve">
+    <value>Cannot_locate_folder</value>
+    <comment>New Translation needed</comment>
   </data>
 </root>
